# ll_systeminfo

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  _clang-format  appveyor.yml  build_ll.py  readme.md
cfg/: default.cfg.yaml  dependencies.yaml
examples/demo/: main.cpp  systeminfo_demo.manifest
include/systeminfo/: exception.h  os.h  platform.h  storage.h  types.h  version.h
src/: exception.cpp  os.cpp  os_impl.linux.cpp  os_impl.osx.mm  os_impl.win.cpp  platform.cpp  platform_impl.h  platform_impl.linux.cpp  platform_impl.osx.mm  platform_impl.win.cpp  storage.cpp  storage_impl.linux.cpp  storage_impl.osx.mm  storage_impl.win.cpp
tests/: main.cpp
